存在问题代码

--- a/项目文档/功能文档.md
+++ b/项目文档/功能文档.md
@@ -16,28 +16,39 @@
 
 ## 二、系统架构总览
 
-**架构风格**：客户端-服务端架构，包含三个核心组件。
+**架构风格**：客户端-服务端架构，包含四个核心组件。
 
 1. **客户端（Agent）**：部署于被监控主机，负责数据采集与上报
-2. **服务端（Server Core）**：系统中枢，负责数据处理、连接代理与API提供
-3. **前端（Web Console）**：提供统一的可视化操作界面
+2. **服务端（Server Core）**：系统中枢，负责数据处理、SSH代理与API提供
+3. **AI服务（AI Service）**：独立AI服务，负责侧边栏AI助手功能
+4. **前端（Web Console）**：提供统一的可视化操作界面
 
 **架构图**：
 
 ```
 ┌─────────────────────────────────────────────────────┐
 │              Monitor-Web (Vue 3 前端)                │
-│           仪表盘 | 主机监控 | SSH终端                 │
-└──────────────────────┬──────────────────────────────┘
-                       │ HTTP/WebSocket
-                       ▼
-┌─────────────────────────────────────────────────────┐
-│            Monitor-Server (Spring Boot)              │
-│  Agent管理 | 指标存储 | SSH代理 | 认证授权             │
-│    MySQL  |  Redis  |  RabbitMQ  |  WebSocket       │
-└──────────────────────┬──────────────────────────────┘
-                       │ HTTP 注册/上报
-                       ▼
+│   仪表盘 | 主机监控 | SSH终端 | AI助手                │
+│   ├─ request.ts (→ Server:8080)                     │
+│   └─ ai-request.ts (→ AI:8081)                     │
+└──────────────┬──────────────────┬───────────────────┘
+               │                  │
+        HTTP/WebSocket      HTTP REST API
+               │                  │
+               ▼                  ▼
+┌──────────────────────────┐  ┌──────────────────────────┐
+│   Monitor-Server (8080)  │  │   Monitor-AI (8081)      │
+│  Agent管理 | 指标存储     │  │   侧边栏AI助手            │
+│  SSH代理 | SSH绑定AI      │  │   ChatController         │
+│  AgentApiController      │  │   ChatService            │
+│  MySQL | Redis | RabbitMQ│  │   Redis                  │
+└──────────────┬───────────┘  └─────────────▲────────────┘
+               │                            │
+               │      Feign (Agent API)      │
+               │◄───────────────────────────┘
+               │
+        HTTP 注册/上报
+               ▼
 ┌─────────────────────────────────────────────────────┐
 │         Monitor-Agent (部署在被监控主机)              │
 │     自动注册 | 数据采集 | 定时上报 | 配置更新          │
@@ -453,10 +464,16 @@ GET /api/health
 
 **功能点**：
 - 两种AI助手场景，满足不同使用需求
-- 通用AI对话（侧边栏）
-- SSH绑定AI助手（主机详情页）
+- 通用AI对话（侧边栏，独立服务）
+- SSH绑定AI助手（主机详情页，与SSH终端集成）
 
-##### 3.5.1 侧边栏AI助手（全局）
+**服务架构**：
+- **Monitor-AI (端口8081)**：侧边栏AI助手服务，独立部署
+- **Monitor-Server (端口8080)**：SSH绑定AI助手，与SSH终端集成
+
+##### 3.5.1 侧边栏AI助手（Monitor-AI服务）
+
+**服务位置**：Monitor-AI (端口8081)
 
 **前端页面**：`/src/views/ai/SidebarAssistant.vue`
 
@@ -468,7 +485,7 @@ GET /api/health
 - **消息历史**：自动加载会话的消息历史
 - **相对时间**：智能显示时间（刚刚、X分钟前、X天前）
 - **Markdown渲染**：支持代码高亮和格式化显示
-- **主机关联**：可选关联主机到会话
+- **主机关联**：可选关联主机到会话（通过Feign调用Server获取Agent信息）
 
 **UI布局**：
 ```
@@ -486,7 +503,7 @@ GET /api/health
 └─────────────────────────────────────────────────────────────┘
 ```
 
-**API接口**：
+**API接口**（Monitor-AI服务，端口8081）：
 ```
 POST   /api/chat/sessions                    创建新会话
 GET    /api/chat/sessions                    获取所有会话
@@ -496,6 +513,19 @@ GET    /api/chat/sessions/{sessionId}/messages  获取消息历史
 POST   /api/chat/messages                    发送消息
 DELETE /api/chat/sessions/{sessionId}/messages  清空消息
 POST   /api/chat/sessions/{sessionId}/link   关联主机
+```
+
+**前端配置**：
+```typescript
+// .env.development
+VITE_AI_API_BASE_URL=http://localhost:8081/api
+
+// src/utils/ai-request.ts - AI服务专用HTTP客户端
+import axios from 'axios'
+const aiRequest = axios.create({
+  baseURL: import.meta.env.VITE_AI_API_BASE_URL,
+  timeout: 30000
+})
 ```
 
 ##### 3.5.2 主机详情页AI助手（SSH绑定）
@@ -529,12 +559,14 @@ WebSocket /ws/ai/ssh-assistant/{aiSessionId}   WebSocket连接
 
 | 特性 | 侧边栏AI助手 | 主机详情页AI助手 |
 |------|-------------|-----------------|
+| **服务模块** | Monitor-AI (8081) | Monitor-Server (8080) |
 | **位置** | 全局侧边栏菜单 | 主机详情页对话框 |
 | **通信方式** | HTTP REST API | WebSocket长连接 |
 | **会话类型** | 多会话管理 | 单会话（与SSH绑定） |
 | **主机关联** | 可选 | 必需（通过SSH Session） |
 | **SSH命令执行** | 不支持 | 支持（实时输出+AI分析） |
 | **消息存储** | Redis（assistant:session:*） | Redis（ai:ssh:*） |
+| **服务依赖** | 通过Feign调用Server获取Agent信息 | 直接访问本地Agent数据 |
 
 #### 3.7 系统管理界面（未实现）
 
