--- a/项目文档/开发文档.md
+++ b/项目文档/开发文档.md
@@ -4,8 +4,8 @@
 
 本文档面向开发者，介绍 Monitor 项目的系统架构、核心模块、开发流程，帮助开发者快速上手项目开发。
 
-**文档版本**：v1.0.0
-**更新日期**：2026-02-02
+**文档版本**：v3.0.0
+**更新日期**：2026-02-07
 
 ---
 
@@ -17,19 +17,29 @@
 ┌─────────────────────────────────────────────────────────────────┐
 │                         Browser Frontend                         │
 │                     (Vue 3 + TypeScript)                        │
+│  ┌──────────────────────────────────────────────────────────┐   │
+│  │  request.ts (Server:8080)     ai-request.ts (AI:8081)    │   │
+│  └──────────────────────────────────────────────────────────┘   │
 └────────────────────────┬────────────────────────────────────────┘
-                         │ HTTP/WebSocket
-                         ▼
+                         │                    │
+                         ▼                    ▼
 ┌─────────────────────────────────────────────────────────────────┐
-│                      Monitor-Server:8080                        │
-│  ┌──────────────┐  ┌──────────────┐  ┌──────────────────────┐  │
-│  │   Agent API  │  │  Auth API    │  │     SSH WebSocket    │  │
-│  │              │  │              │  │      Handler         │  │
-│  └──────────────┘  └──────────────┘  └──────────────────────┘  │
-│  ┌──────────────┐  ┌──────────────┐  ┌──────────────────────┐  │
-│  │Monitor API   │  │Spring Security│  │   MySQL + Redis      │  │
-│  │              │  │   + JWT      │  │   + RabbitMQ         │  │
-│  └──────────────┘  └──────────────┘  └──────────────────────┘  │
+│              Monitor-Server:8080      Monitor-AI:8081          │
+│  ┌──────────────┐  ┌──────────────┐   ┌──────────────────────┐ │
+│  │   Agent API  │  │  Auth API    │   │  ChatController      │ │
+│  │              │  │              │   │  (Sidebar AI)        │ │
+│  └──────────────┘  └──────────────┘   └──────────────────────┘ │
+│  ┌──────────────┐  ┌──────────────┐   ┌──────────────────────┐ │
+│  │ SSH WebSocket│  │AgentApiController│ ChatService          │ │
+│  │              │  │(for AI Service)│                       │ │
+│  └──────────────┘  └──────────────┘   └──────────────────────┘ │
+│  ┌──────────────┐  ┌──────────────┐   ┌──────────────────────┐ │
+│  │Monitor API   │  │Spring Security│  AgentClient (Feign)    │ │
+│  │              │  │   + JWT      │   │      │               │ │
+│  └──────────────┘  └──────────────┘   └──────┼───────────────┘ │
+│  ┌──────────────────────────────────────────────┐               │ │
+│  │         MySQL + Redis + RabbitMQ             │◄──────────────┘ │
+│  └──────────────────────────────────────────────┘                 │
 └────────────────────────┬────────────────────────────────────────┘
                          │ HTTP Registration & Reporting
                          ▼
@@ -45,6 +55,12 @@
 └─────────────────────────────────────────────────────────────────┘
 ```
 
+**架构说明**：
+- **Monitor-Server (8080)**：核心服务，包含Agent管理、SSH代理、认证授权等
+- **Monitor-AI (8081)**：独立AI服务，提供侧边栏AI助手功能
+- **Monitor-Agent (8081)**：部署在被监控主机的代理
+- **CommonLibrary**：共享实体类和DTO，供Server和AI服务使用
+
 ### 2.2 目录结构
 
 ```
@@ -53,7 +69,28 @@ monitor-project/
 │   └── src/main/java/com/hundred/monitor/commonlibrary/
 │       ├── request/         # 请求DTO
 │       ├── response/        # 响应DTO
-│       └── model/           # 数据模型
+│       ├── model/           # 数据模型
+│       │   └── ai/          # AI相关实体
+│       │       ├── model/   # ChatMessage, ChatSessionInfo, SystemPrompt
+│       │       ├── request/ # CreateSessionRequest, SendMessageRequest
+│       │       └── response/# ChatResponse, SessionInfoResponse
+│       └── common/          # BaseResponse等
+│
+├── Monitor-AI/             # AI服务模块 (端口8081)
+│   └── src/main/java/com/hundred/monitor/ai/
+│       ├── MonitorAiApplication.java
+│       ├── config/
+│       │   ├── AIModelConfig.java      # GLM-4.7、Ollama模型配置
+│       │   ├── JwtConfig.java          # JWT认证配置
+│       │   ├── RedisConfig.java        # Redis配置
+│       │   └── FeignConfig.java        # Feign客户端配置
+│       ├── controller/
+│       │   └── ChatController.java     # 侧边栏AI聊天API (8个端点)
+│       ├── service/
+│       │   ├── ChatService.java        # 聊天服务逻辑
+│       │   └── AgentClient.java        # Feign客户端（调用Server）
+│       └── utils/
+│           └── ChatSessionRedisUtils.java # Redis操作工具
 │
 ├── Monitor-Agent/           # Agent模块
 │   └── src/main/java/com/hundred/monitor/agent/
@@ -77,25 +114,44 @@ monitor-project/
 │           ├── request/
 │           └── response/
 │
-├── Monitor-Server/          # Server模块
+├── Monitor-Server/          # Server模块 (端口8080)
 │   └── src/main/java/com/hundred/monitor/server/
 │       ├── MonitorServerApplication.java
 │       ├── controller/
 │       │   ├── AgentController.java      # Agent接口
+│       │   ├── AgentApiController.java   # Agent API（供AI服务调用）
 │       │   ├── MonitorController.java    # 监控数据接口
 │       │   ├── SshController.java        # SSH接口
 │       │   ├── AuthController.java       # 认证接口
+│       │   ├── AiSshAssistantController.java # SSH绑定AI
 │       │   └── HealthController.java     # 健康检查
 │       ├── service/
 │       │   ├── AgentService.java
 │       │   ├── AgentMetricsService.java
 │       │   ├── SshService.java
 │       │   ├── AuthService.java
-│       │   └── MonitorService.java
+│       │   ├── MonitorService.java
+│       │   └── AiSshAssistantService.java # SSH绑定AI服务
+│       ├── ai/                          # SSH绑定AI模块
+│       │   ├── command/                 # 命令执行与分析
+│       │   │   ├── CommandContext.java
+│       │   │   ├── CommandContextManager.java
+│       │   │   └── CommandTimeoutScheduler.java
+│       │   ├── context/                 # ThreadLocal上下文
+│       │   │   └── SshSessionContext.java
+│       │   ├── entity/                  # AI实体
+│       │   │   ├── Assistant.java
+│       │   │   └── SshAssistantMessage.java
+│       │   ├── tools/                   # SSH工具
+│       │   │   └── SshExecuteTool.java
+│       │   └── utils/                   # Redis工具
+│       │       └── TerminalChatRedisUtils.java
 │       ├── websocket/
-│       │   ├── SshWebSocketHandler.java   # WebSocket处理
-│       │   ├── SshSessionManager.java     # 会话管理
-│       │   └── SshSession.java
+│       │   ├── SshWebSocketHandler.java   # SSH WebSocket处理
+│       │   ├── SshSessionManager.java     # SSH会话管理
+│       │   └── ai/                       # AI WebSocket
+│       │       ├── handler/AiSshAssistantHandler.java
+│       │       └── manager/AiSshAssistantManager.java
 │       ├── security/
 │       │   ├── JwtAuthenticationFilter.java
 │       │   ├── JwtTokenProvider.java
@@ -118,13 +174,25 @@ monitor-project/
         ├── main.ts
         ├── App.vue
         ├── api/             # API调用
+        │   └── ai.ts        # AI接口（ChatSessionAPI, AIAssistantAPI）
         ├── components/      # 组件
+        │   └── ai/          # AI组件
+        │       ├── ChatInterface.vue
+        │       ├── ChatMessage.vue
+        │       ├── ChatInput.vue
+        │       ├── MarkdownRenderer.vue
+        │       ├── AiAssistantDialog.vue  # SSH绑定AI
+        │       └── SidebarAssistant.vue   # 侧边栏AI
         ├── views/           # 页面视图
         ├── router/          # 路由配置
         ├── stores/          # Pinia状态管理
         ├── types/           # TypeScript类型
+        │   └── ai.ts        # AI类型定义
         ├── utils/           # 工具函数
+        │   ├── request.ts   # Server请求
+        │   └── ai-request.ts # AI服务请求
         └── composables/     # Vue组合式函数
+            └── useAiChat.ts # AI聊天状态管理
 ```
 
 ---
@@ -165,16 +233,58 @@ monitor-project/
 
 ---
 
-### 3.2 Server 模块
+### 3.2 Monitor-AI 模块
+
+**模块职责**：独立的AI助手服务，提供侧边栏AI聊天功能。
+
+#### Controller 层
+
+| Controller | 基础路径 | 职责 |
+|------------|----------|------|
+| `ChatController` | `/api/chat` | 侧边栏AI聊天API |
+
+#### Service 层
+
+| Service | 职责 |
+|---------|------|
+| `ChatService` | 聊天服务逻辑、会话管理、消息处理 |
+
+#### Feign 客户端
+
+| Client | 用途 |
+|--------|------|
+| `AgentClient` | 调用Monitor-Server的Agent API |
+
+#### 核心配置
+
+| 配置类 | 说明 |
+|--------|------|
+| `AIModelConfig` | GLM-4.7和Ollama双模型配置 |
+| `JwtConfig` | JWT认证配置 |
+| `RedisConfig` | Redis配置 |
+| `FeignConfig` | Feign客户端配置 |
+| `CorsConfig` | CORS跨域配置 |
+
+**CORS配置说明**：
+- 允许的源：`http://localhost:5173`, `http://127.0.0.1:5173`, `http://localhost:8080`
+- 允许的方法：GET, POST, PUT, DELETE, OPTIONS, PATCH
+- 允许携带凭证（`AllowCredentials: true`）
+- 预检请求有效期：3600秒
+
+---
+
+### 3.3 Server 模块
 
 #### Controller 层
 
 | Controller | 基础路径 | 职责 |
 |------------|----------|------|
 | `AgentController` | `/api/v1` | Agent注册、数据上报接收 |
+| `AgentApiController` | `/api/v1/agent` | Agent信息API（供AI服务调用） |
 | `AuthController` | `/api/auth` | 用户认证、注册、Token管理 |
 | `MonitorController` | `/api/monitor` | 监控数据查询 |
 | `SshController` | `/api/v1/ssh` | SSH连接管理 |
+| `AiSshAssistantController` | `/api/ai/ssh-assistant` | SSH绑定AI助手 |
 | `HealthController` | `/api` | 健康检查 |
 
 #### Service 层
@@ -186,6 +296,7 @@ monitor-project/
 | `MonitorService` | 监控数据聚合、图表数据 |
 | `SshService` | SSH连接建立、凭证管理 |
 | `AuthService` | 用户认证、Token生成 |
+| `AiSshAssistantService` | SSH绑定AI助手服务 |
 
 #### WebSocket 处理
 
@@ -392,7 +503,6 @@ monitor-project/
 |------|------|------|
 | SSH密码明文存储 | `SshServiceImpl.java:175` | 安全隐患 |
 | InfluxDB未使用 | - | 性能未优化 |
-| AI助手后端缺失 | `/src/main/java/../aitools/` | 前端无法使用 |
 | 用户管理API缺失 | - | 前端页面无效 |
 
 ### 6.2 计划功能
@@ -401,7 +511,8 @@ monitor-project/
 |------|--------|------|
 | SSH凭证加密 | 高 | 使用AES加密存储 |
 | InfluxDB集成 | 中 | 时序数据存储优化 |
-| AI助手后端 | 中 | 实现聊天、指令执行接口 |
 | 用户管理API | 低 | 用户CRUD、角色管理 |
 | WebSocket心跳 | 低 | 连接保活机制 |
 | 终端二进制消息 | 低 | 终端resize支持 |
+
+### 
